# oblique-strategies-mcp

./: .gitignore  CLAUDE.md  README.md  claude_desktop_config.example.json  main.py  pyproject.toml  run-server.sh
.github/workflows/: ci.yml
oblique_strategies_mcp/: __init__.py  __main__.py  strategies_core.py
oblique_strategies_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
oblique_strategies_mcp/strategies/: README.md
tests/: test_dummy.py  test_strategies_core.py
