[project]
name = "oblique-strategies-mcp"
version = "0.1.0"
description = "MCP server for Brian Eno's Oblique Strategies"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.12.4",
    "pydantic>=2.11.7",
]

[project.scripts]
oblique-strategies-mcp = "oblique_strategies_mcp.__main__:main"

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.8",
]

[tool.uv]
package = true

[tool.setuptools]
packages = ["oblique_strategies_mcp"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["strategies/*.txt"]
